--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -16,18 +16,18 @@
       - name: Install dependencies
         script: npm install --legacy-peer-deps
       - name: Install Capacitor
-        script: npm install @capacitor/cli@7 @capacitor/ios@7 --legacy-peer-deps
+        script: npm install @capacitor/cli@7 @capacitor/ios@7 @capacitor-community/facebook-login --legacy-peer-deps
       - name: Build web app
         script: npm run build
       - name: Add iOS platform
         script: |
           rm -rf ios
-          npx cap add ios
+          npx cap add ios || true
       - name: Set iOS Deployment Target
         script: |
           cd ios/App
           sed -i '' "s/platform :ios, '13.0'/platform :ios, '14.0'/g" Podfile
-          sed -i '' "s/IPHONEOS_DEPLOYMENT_TARGET = 13.0/IPHONEOS_DEPLOYMENT_TARGET = 14.0/g" App.xcodeproj/project.pbxproj
+          find . -name "project.pbxproj" -exec sed -i '' "s/IPHONEOS_DEPLOYMENT_TARGET = 13.0/IPHONEOS_DEPLOYMENT_TARGET = 14.0/g" {} \;
       - name: Sync iOS
         script: npx cap sync ios
       - name: Fix Bundle ID
@@ -54,6 +54,7 @@
           /usr/libexec/PlistBuddy -c "Add :NSMicrophoneUsageDescription string 'Habla con Dios necesita acceso al microfono para escuchar tus oraciones.'" Info.plist || true
           /usr/libexec/PlistBuddy -c "Add :NSSpeechRecognitionUsageDescription string 'Habla con Dios utiliza el reconocimiento de voz para entender tus palabras.'" Info.plist || true
           /usr/libexec/PlistBuddy -c "Add :ITSAppUsesNonExemptEncryption bool false" Info.plist || true
+          /usr/libexec/PlistBuddy -c "Add :NSUserTrackingUsageDescription string 'Habla con Dios utiliza el identificador de publicidad para mejorar tu experiencia con anuncios relevantes.'" Info.plist || true
       - name: Setup App Icons
         script: |
           ICON_DIR=ios/App/App/Assets.xcassets/AppIcon.appiconset
