--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -15,6 +15,8 @@ workflows:
     scripts:
       - name: Install dependencies
         script: npm install --legacy-peer-deps
+      - name: Install Capacitor
+        script: npm install @capacitor/cli @capacitor/ios @capacitor-community/facebook-login --legacy-peer-deps
       - name: Build web app
         script: npm run build
       - name: Add iOS platform
