--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -15,106 +15,10 @@ workflows:
     scripts:
       - name: Install dependencies
         script: npm install --legacy-peer-deps
-      - name: Install Capacitor
-        script: npm install @capacitor/cli @capacitor/ios @capacitor-community/facebook-login --legacy-peer-deps
       - name: Build web app
         script: npm run build
-      - name: Add iOS platform
-        script: |
-          rm -rf ios
-          npx cap add ios || true
-      - name: Fix iOS Deployment Target
-        script: |
-          cd ios/App
-          sed -i '' "s/platform :ios, '13.0'/platform :ios, '14.0'/g" Podfile
-          sed -i '' "s/IPHONEOS_DEPLOYMENT_TARGET = 13.0/IPHONEOS_DEPLOYMENT_TARGET = 14.0/g" App.xcodeproj/project.pbxproj
-      - name: Install CocoaPods
-        script: cd ios/App && pod install
-      - name: Copy Info.plist with Facebook SDK
-        script: |
-          cat > ios/App/App/Info.plist << 'PLISTEOF'
-          <?xml version="1.0" encoding="UTF-8"?>
-          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-          <plist version="1.0">
-          <dict>
-            <key>CFBundleDevelopmentRegion</key>
-            <string>en</string>
-            <key>CFBundleDisplayName</key>
-            <string>Habla con Dios</string>
-            <key>CFBundleExecutable</key>
-            <string>$(EXECUTABLE_NAME)</string>
-            <key>CFBundleIdentifier</key>
-            <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-            <key>CFBundleInfoDictionaryVersion</key>
-            <string>6.0</string>
-            <key>CFBundleName</key>
-            <string>$(PRODUCT_NAME)</string>
-            <key>CFBundlePackageType</key>
-            <string>APPL</string>
-            <key>CFBundleShortVersionString</key>
-            <string>$(MARKETING_VERSION)</string>
-            <key>CFBundleVersion</key>
-            <string>$(CURRENT_PROJECT_VERSION)</string>
-            <key>LSRequiresIPhoneOS</key>
-            <true/>
-            <key>UILaunchStoryboardName</key>
-            <string>LaunchScreen</string>
-            <key>UIMainStoryboardFile</key>
-            <string>Main</string>
-            <key>UIRequiredDeviceCapabilities</key>
-            <array>
-              <string>armv7</string>
-            </array>
-            <key>UISupportedInterfaceOrientations</key>
-            <array>
-              <string>UIInterfaceOrientationPortrait</string>
-              <string>UIInterfaceOrientationLandscapeLeft</string>
-              <string>UIInterfaceOrientationLandscapeRight</string>
-            </array>
-            <key>UISupportedInterfaceOrientations~ipad</key>
-            <array>
-              <string>UIInterfaceOrientationPortrait</string>
-              <string>UIInterfaceOrientationPortraitUpsideDown</string>
-              <string>UIInterfaceOrientationLandscapeLeft</string>
-              <string>UIInterfaceOrientationLandscapeRight</string>
-            </array>
-            <key>UIViewControllerBasedStatusBarAppearance</key>
-            <true/>
-            <key>CFBundleURLTypes</key>
-            <array>
-              <dict>
-                <key>CFBundleURLSchemes</key>
-                <array>
-                  <string>fb3422761491223464</string>
-                </array>
-              </dict>
-            </array>
-            <key>FacebookAppID</key>
-            <string>3422761491223464</string>
-            <key>FacebookClientToken</key>
-            <string>504891f7b471eef8f707c6f3eec31e2e</string>
-            <key>FacebookDisplayName</key>
-            <string>Habla con Dios</string>
-            <key>LSApplicationQueriesSchemes</key>
-            <array>
-              <string>fbapi</string>
-              <string>fb-messenger-share-api</string>
-            </array>
-            <key>NSMicrophoneUsageDescription</key>
-            <string>Habla con Dios necesita acceso al microfono para escuchar tus oraciones.</string>
-            <key>NSSpeechRecognitionUsageDescription</key>
-            <string>Habla con Dios utiliza el reconocimiento de voz para entender tus palabras.</string>
-            <key>NSUserTrackingUsageDescription</key>
-            <string>Habla con Dios utiliza el identificador de publicidad para mejorar tu experiencia con anuncios relevantes.</string>
-            <key>ITSAppUsesNonExemptEncryption</key>
-            <false/>
-          </dict>
-          </plist>
-          PLISTEOF
-      - name: Fix Bundle ID
-        script: |
-          cd ios/App
-          sed -i '' "s/PRODUCT_BUNDLE_IDENTIFIER = io.ionic.starter/PRODUCT_BUNDLE_IDENTIFIER = es.movilive.hablacondios2/g" App.xcodeproj/project.pbxproj
+      - name: Sync iOS
+        script: npx cap sync ios
       - name: Setup App Icons
         script: |
           ICON_DIR=ios/App/App/Assets.xcassets/AppIcon.appiconset
@@ -139,6 +43,8 @@ workflows:
         script: |
           cd ios/App
           agvtool new-version -all 74
+      - name: Install CocoaPods
+        script: cd ios/App && pod install
       - name: Set up code signing
         script: |
           app-store-connect fetch-signing-files "es.movilive.hablacondios2" --type IOS_APP_STORE --create
