--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -9,6 +9,7 @@ use_frameworks!
 install! 'cocoapods', :disable_input_output_paths => true
 
 def capacitor_pods
+  pod 'FBSDKCoreKit'
   pod 'Capacitor', :path => '../../node_modules/@capacitor/ios'
   pod 'CapacitorCordova', :path => '../../node_modules/@capacitor/ios'
   pod 'CapacitorCommunityFacebookLogin', :path => '../../node_modules/@capacitor-community/facebook-login'
@@ -23,6 +24,7 @@ end
 
 target 'App' do
   capacitor_pods
+  pod 'FBSDKCoreKit'
   # Add your Pods here
 end
 
