--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -14,7 +14,9 @@ workflows:
       node: 20
     scripts:
       - name: Install dependencies
-        script: npm install --legacy-peer-deps
+        script: |
+          npm install --legacy-peer-deps
+          npm install @capacitor/cli @capacitor/core @capacitor/ios --legacy-peer-deps
       - name: Build web app
         script: npm run build
       - name: Copy web assets
